service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: client-certificate-auth-cert
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: deployment
  type: ClusterIP
